--- a/index.html
+++ b/index.html
@@ -1,19 +1,20 @@
 
 <html>
     <head>
-      <title>Animal Sound Identification Web App</title>
+      <title>Sound Identification Web App</title>
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
       <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
       <script src="https://unpkg.com/ml5@0.4.3/dist/ml5.min.js"></script>
+      <link href="https://fonts.googleapis.com/css2?family=Special+Elite&display=swap" rel="stylesheet">
       <link rel="stylesheet" type="text/css" href="style.css">
     </head>
   
     <body>
     <div class="col-xs-12 header_div text-center">
       <h2>Sound controlled Animals</h2>
-      <p>note: play different sounds like barking,meowing,roaring to Identify which animal</p>
+      <p>note: play different sounds like barking of a dog, meowing of a cat</p>
     </div>
     <div class="main_div">
    <center>
@@ -22,12 +23,13 @@
   <h3 id="result_label">I can hear- </h3>
   <h4 id="result_confidence">Accuracy- </h4>
   <br>
-  <img src="dog.jpg" id="dog" width="300" height="300" >
-  <img src="cat.jpg" id="cat" width="300" height="300">
-  <img src="lion.jpg" id="lion" width="300" height="300">
-  <img src="background.jpg" id="background" width="300" height="300">
+  <img src="dog.png" id="dog" width="300" height="300">
+  <img src="cat.png" id="cat" width="300" height="300">
+  <img src="liob.png" id="lion" width="300" height="300">
+  <img src="cow.png" id="cow" width="300" height="300">
 
-   </center>
+  
+      <center>
         </div>
         <div class="copy_right_footer">
           Developed by - joel neo
@@ -39,5 +41,10 @@
   
   
   
+  
+  
+  
+  
+   
   
   
